--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,69 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, user-scalable=no"
-  />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Bazaarika Chatbot</title>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 0; background:#0b1020; color:#eaf0ff; }
-    .wrap { max-width: 760px; margin: 0 auto; padding: 24px; }
-    .card { background:#111832; border:1px solid #203055; border-radius: 16px; padding: 16px; box-shadow: 0 10px 30px rgba(0,0,0,.25); }
-    .row { display: flex; gap: 12px; align-items: stretch; }
-    textarea { flex:1; min-height: 64px; resize: vertical; border-radius: 12px; border:1px solid #31406a; background:#0d1430; color:#eaf0ff; padding: 12px; }
-    button { border:0; border-radius: 12px; padding: 12px 16px; background:#47a3ff; color:#00112a; font-weight: 700; cursor:pointer; }
-    button[disabled] { opacity:.6; cursor:not-allowed; }
-    .chat { margin-top: 16px; display:flex; flex-direction:column; gap:12px; }
-    .msg { white-space: pre-wrap; line-height: 1.5; }
-    .user { background:#0e1a3d; padding:12px; border-radius:12px; }
-    .ai { background:#0a233f; padding:12px; border-radius:12px; }
-    .meta { font-size: 12px; opacity: .7; margin-bottom: 6px; }
-    .top { display:flex; gap:12px; align-items:center; margin-bottom:12px; }
-    select { background:#0d1430; color:#eaf0ff; border:1px solid #31406a; border-radius:10px; padding:10px; }
-    label { font-size: 12px; opacity: .8; }
-    .toolbar { display:flex; gap:12px; align-items:center; }
-    .stream-dot { display:inline-block; width:8px; height:8px; background:#47a3ff; border-radius:50%; margin-left:6px; animation: pulse 800ms infinite alternate; }
-    @keyframes pulse { from { opacity:.3; } to { opacity:1; } }
+    :root{ --bg:#0b1020; --card:#111832; --muted:#6d7aa6; --accent:#47a3ff; --ring:#203055; }
+    *{ box-sizing: border-box }
+    body{ margin:0; font-family: ui-sans-serif, system-ui, Segoe UI, Roboto, Arial; background:var(--bg); color:#eef3ff;}
+    .wrap{ max-width:820px; margin:0 auto; padding:18px; }
+    .header{ display:flex; gap:10px; align-items:center; justify-content:space-between; margin-bottom:12px; }
+    .brand{ display:flex; align-items:center; gap:10px; }
+    .dot{ width:10px; height:10px; border-radius:50%; background:#f44; box-shadow:0 0 0 3px rgba(255,255,255,.04); }
+    .ok{ background:#4cff7a; }
+    .chip{ font-size:12px; padding:6px 10px; background:#0c1736; border:1px solid var(--ring); border-radius:999px; color:#cfe0ff; }
+    .select, .input, .btn{ border:1px solid var(--ring); background:#0e1635; color:#eaf0ff; border-radius:12px; }
+    .select{ padding:10px; }
+    .card{ background:var(--card); border:1px solid var(--ring); border-radius:16px; padding:14px; box-shadow:0 12px 30px rgba(0,0,0,.25); }
+    .chat{ display:flex; flex-direction:column; gap:10px; height:60vh; overflow:auto; padding:10px; background:#0a1331; border-radius:14px; border:1px solid var(--ring); }
+    .row{ display:flex; gap:10px; margin-top:12px; }
+    .input{ flex:1; min-height:60px; resize:vertical; padding:12px; }
+    .btn{ padding:12px 16px; font-weight:700; background:var(--accent); color:#00112a; cursor:pointer; }
+    .btn[disabled]{ opacity:.65; cursor:not-allowed; }
+    .msg{ max-width:85%; padding:10px 12px; border-radius:14px; white-space:pre-wrap; line-height:1.5; }
+    .ai{ background:#0b2547; border:1px solid #243a67; align-self:flex-start; }
+    .user{ background:#132a57; border:1px solid #2c478b; align-self:flex-end; }
+    .meta{ font-size:11px; opacity:.75; margin-bottom:4px; }
+    .typing{ display:inline-block; width:34px; height:10px; vertical-align:middle; }
+    .b{ width:8px; height:8px; background:var(--accent); border-radius:50%; display:inline-block; margin:0 2px; animation:blink 1s infinite alternate; }
+    .b:nth-child(2){ animation-delay:.2s } .b:nth-child(3){ animation-delay:.4s }
+    @keyframes blink{ from{ opacity:.3 } to{ opacity:1 } }
+    .footer{ display:flex; gap:8px; align-items:center; }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="card">
-      <div class="top">
-        <h2 style="margin:0;">🤖 Bazaarika Chatbot</h2>
-        <div class="toolbar">
-          <label>
-            Model:
-            <select id="model">
-              <option value="gpt-4o-mini">gpt-4o-mini (recommended)</option>
-              <option value="gpt-4o">gpt-4o</option>
-            </select>
-          </label>
-          <label>
-            <input type="checkbox" id="useStream" checked />
-            Streaming <span class="stream-dot"></span>
-          </label>
+    <div class="header">
+      <div class="brand">
+        <div id="statusDot" class="dot"></div>
+        <div>
+          <div style="font-weight:800">🤖 Bazaarika Chatbot</div>
+          <div id="statusText" class="chip">checking…</div>
         </div>
       </div>
+      <div class="footer">
+        <label class="chip">
+          Model:
+          <select id="model" class="select">
+            <option value="gpt-4o-mini" selected>gpt-4o-mini (fast)</option>
+            <option value="gpt-4o">gpt-4o (quality)</option>
+          </select>
+        </label>
+        <label class="chip">
+          <input type="checkbox" id="useStream" checked> Streaming
+        </label>
+      </div>
+    </div>
+
+    <div class="card">
+      <div id="chat" class="chat"></div>
 
       <div class="row">
-        <textarea id="input" placeholder="Apna sawal likhiye..."></textarea>
-        <button id="send">Send</button>
+        <textarea id="input" class="input" placeholder="Apna sawal yahan likhiye… (Enter = Send, Shift+Enter = New line)"></textarea>
+        <button id="send" class="btn">Send</button>
       </div>
-
-      <div id="chat" class="chat"></div>
     </div>
   </div>
 
