--- a/public/index.html
+++ b/public/index.html
@@ -1,72 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Bazaarika Chatbot</title>
-  <style>
-    :root{ --bg:#0b1020; --card:#111832; --muted:#6d7aa6; --accent:#47a3ff; --ring:#203055; }
-    *{ box-sizing: border-box }
-    body{ margin:0; font-family: ui-sans-serif, system-ui, Segoe UI, Roboto, Arial; background:var(--bg); color:#eef3ff;}
-    .wrap{ max-width:820px; margin:0 auto; padding:18px; }
-    .header{ display:flex; gap:10px; align-items:center; justify-content:space-between; margin-bottom:12px; }
-    .brand{ display:flex; align-items:center; gap:10px; }
-    .dot{ width:10px; height:10px; border-radius:50%; background:#f44; box-shadow:0 0 0 3px rgba(255,255,255,.04); }
-    .ok{ background:#4cff7a; }
-    .chip{ font-size:12px; padding:6px 10px; background:#0c1736; border:1px solid var(--ring); border-radius:999px; color:#cfe0ff; }
-    .select, .input, .btn{ border:1px solid var(--ring); background:#0e1635; color:#eaf0ff; border-radius:12px; }
-    .select{ padding:10px; }
-    .card{ background:var(--card); border:1px solid var(--ring); border-radius:16px; padding:14px; box-shadow:0 12px 30px rgba(0,0,0,.25); }
-    .chat{ display:flex; flex-direction:column; gap:10px; height:60vh; overflow:auto; padding:10px; background:#0a1331; border-radius:14px; border:1px solid var(--ring); }
-    .row{ display:flex; gap:10px; margin-top:12px; }
-    .input{ flex:1; min-height:60px; resize:vertical; padding:12px; }
-    .btn{ padding:12px 16px; font-weight:700; background:var(--accent); color:#00112a; cursor:pointer; }
-    .btn[disabled]{ opacity:.65; cursor:not-allowed; }
-    .msg{ max-width:85%; padding:10px 12px; border-radius:14px; white-space:pre-wrap; line-height:1.5; }
-    .ai{ background:#0b2547; border:1px solid #243a67; align-self:flex-start; }
-    .user{ background:#132a57; border:1px solid #2c478b; align-self:flex-end; }
-    .meta{ font-size:11px; opacity:.75; margin-bottom:4px; }
-    .typing{ display:inline-block; width:34px; height:10px; vertical-align:middle; }
-    .b{ width:8px; height:8px; background:var(--accent); border-radius:50%; display:inline-block; margin:0 2px; animation:blink 1s infinite alternate; }
-    .b:nth-child(2){ animation-delay:.2s } .b:nth-child(3){ animation-delay:.4s }
-    @keyframes blink{ from{ opacity:.3 } to{ opacity:1 } }
-    .footer{ display:flex; gap:8px; align-items:center; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bazaarika Chatbot</title>
+<style>
+  body { margin:0; font-family:sans-serif; background:#f1f1f1; display:flex; flex-direction:column; height:100vh; }
+  #chat { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; gap:10px;}
+  .message { padding:10px; border-radius:10px; max-width:80%; word-wrap:break-word;}
+  .user { background:#0084ff; color:white; align-self:flex-end;}
+  .assistant { background:#e5e5ea; color:black; align-self:flex-start;}
+  #inputBox { display:flex; padding:10px; background:white;}
+  #inputBox input { flex:1; padding:10px; font-size:16px; border-radius:10px; border:1px solid #ccc; margin-right:10px;}
+  #inputBox button { padding:10px 20px; font-size:16px; border:none; border-radius:10px; background:#0084ff; color:white; cursor:pointer;}
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="header">
-      <div class="brand">
-        <div id="statusDot" class="dot"></div>
-        <div>
-          <div style="font-weight:800">🤖 Bazaarika Chatbot</div>
-          <div id="statusText" class="chip">checking…</div>
-        </div>
-      </div>
-      <div class="footer">
-        <label class="chip">
-          Model:
-          <select id="model" class="select">
-            <option value="gpt-4o-mini" selected>gpt-4o-mini (fast)</option>
-            <option value="gpt-4o">gpt-4o (quality)</option>
-          </select>
-        </label>
-        <label class="chip">
-          <input type="checkbox" id="useStream" checked> Streaming
-        </label>
-      </div>
-    </div>
+<div id="chat"></div>
+<div id="inputBox">
+  <input type="text" id="message" placeholder="Apna sawal yahan likhiye…">
+  <button onclick="sendMessage()">Send</button>
+</div>
+<script>
+  const chat = document.getElementById("chat");
 
-    <div class="card">
-      <div id="chat" class="chat"></div>
+  async function sendMessage() {
+    const input = document.getElementById("message");
+    const text = input.value.trim();
+    if(!text) return;
+    appendMessage(text, 'user');
+    input.value = '';
 
-      <div class="row">
-        <textarea id="input" class="input" placeholder="Apna sawal yahan likhiye… (Enter = Send, Shift+Enter = New line)"></textarea>
-        <button id="send" class="btn">Send</button>
-      </div>
-    </div>
-  </div>
+    const res = await fetch('/api/chat', {
+      method:'POST', headers:{'Content-Type':'application/json'},
+      body: JSON.stringify({messages:[{role:'user', content:text}]})
+    });
+    const data = await res.json();
+    appendMessage(data.text || "Sorry, koi reply nahi mila.", 'assistant');
+    chat.scrollTop = chat.scrollHeight;
+  }
 
-  <script src="./app.js"></script>
+  function appendMessage(text, type){
+    const div = document.createElement('div');
+    div.className = 'message ' + type;
+    div.textContent = text;
+    chat.appendChild(div);
+  }
+</script>
 </body>
 </html>
