--- a/public/index.html
+++ b/public/index.html
@@ -5,47 +5,44 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bazaarika Chatbot</title>
 <style>
-  body { margin:0; font-family:sans-serif; background:#f1f1f1; display:flex; flex-direction:column; height:100vh; }
-  #chat { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; gap:10px;}
-  .message { padding:10px; border-radius:10px; max-width:80%; word-wrap:break-word;}
-  .user { background:#0084ff; color:white; align-self:flex-end;}
-  .assistant { background:#e5e5ea; color:black; align-self:flex-start;}
-  #inputBox { display:flex; padding:10px; background:white;}
-  #inputBox input { flex:1; padding:10px; font-size:16px; border-radius:10px; border:1px solid #ccc; margin-right:10px;}
-  #inputBox button { padding:10px 20px; font-size:16px; border:none; border-radius:10px; background:#0084ff; color:white; cursor:pointer;}
+body { margin:0; font-family:sans-serif; display:flex; flex-direction:column; height:100vh; background:#f0f0f0;}
+#chat { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; gap:10px;}
+.message { padding:10px; border-radius:10px; max-width:80%; word-wrap:break-word;}
+.user { background:#0084ff; color:white; align-self:flex-end;}
+.assistant { background:#e5e5ea; color:black; align-self:flex-start;}
+#inputBox { display:flex; padding:10px; background:white;}
+#inputBox input { flex:1; padding:10px; font-size:16px; border-radius:10px; border:1px solid #ccc; margin-right:10px;}
+#inputBox button { padding:10px 20px; font-size:16px; border:none; border-radius:10px; background:#0084ff; color:white; cursor:pointer;}
 </style>
 </head>
 <body>
 <div id="chat"></div>
 <div id="inputBox">
-  <input type="text" id="message" placeholder="Apna sawal yahan likhiye…">
-  <button onclick="sendMessage()">Send</button>
+<input type="text" id="message" placeholder="Apna sawal yahan likhiye…">
+<button onclick="sendMessage()">Send</button>
 </div>
 <script>
-  const chat = document.getElementById("chat");
-
-  async function sendMessage() {
-    const input = document.getElementById("message");
-    const text = input.value.trim();
-    if(!text) return;
-    appendMessage(text, 'user');
-    input.value = '';
-
-    const res = await fetch('/api/chat', {
-      method:'POST', headers:{'Content-Type':'application/json'},
-      body: JSON.stringify({messages:[{role:'user', content:text}]})
-    });
-    const data = await res.json();
-    appendMessage(data.text || "Sorry, koi reply nahi mila.", 'assistant');
-    chat.scrollTop = chat.scrollHeight;
-  }
-
-  function appendMessage(text, type){
-    const div = document.createElement('div');
-    div.className = 'message ' + type;
-    div.textContent = text;
-    chat.appendChild(div);
-  }
+const chat=document.getElementById("chat");
+async function sendMessage(){
+  const input=document.getElementById("message");
+  const text=input.value.trim();
+  if(!text) return;
+  appendMessage(text,'user');
+  input.value='';
+  const res=await fetch('/api/chat',{
+    method:'POST', headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({messages:[{role:'user',content:text}]})
+  });
+  const data=await res.json();
+  appendMessage(data.text||"Sorry, koi reply nahi mila.",'assistant');
+  chat.scrollTop=chat.scrollHeight;
+}
+function appendMessage(text,type){
+  const div=document.createElement('div');
+  div.className='message '+type;
+  div.textContent=text;
+  chat.appendChild(div);
+}
 </script>
 </body>
 </html>
